# json-escape

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: escape_unescape_benches.rs
examples/: README.md  custom_processor_tokens.rs  simple_unescape.rs  stream_file.rs  stream_file_fn.rs  zero_copy_serde.rs
src/: explicit.rs  lib.rs  stream.rs  token.rs
tests/data/: escaped.txt
