[package]
name = "json-escape"
description = "A no_std, zero-copy, allocation-free library for streaming JSON string escaping and unescaping. Ergonomic, fast, RFC 8259 compliant, with layered APIs for iterators, I/O streaming, and low-level tokens."
version = "0.3.0"
edition = "2024"
authors = ["Victor <victorayo206@example.com>"]
rust-version = "1.87"
license = "MIT"
homepage = "https://github.com/veecore/json-escape"
documentation = "https://docs.rs/json-escape/"
readme = "README.md"
keywords = [
	"json",
	"escape",
	"unescape",
	"serde",
	"zero-copy"
]
exclude = [
    "/.github",
    "/benches",
]

[dependencies]
memchr = "2.7.5"

[features]
alloc = []
default = ["std"]
std = ["alloc"]
# This feature is enabled automatically by build.rs when using a nightly toolchain.
# You can also enable it manually with `cargo build --features simd`.
simd = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}

[[bench]]
name = "escape_unescape_benches"
harness = false

[[example]]
name = "simple_unescape"
path = "examples/simple_unescape.rs"

[[example]]
name = "stream_file"
path = "examples/stream_file.rs"

[[example]]
name = "stream_file_fn"
path = "examples/stream_file_fn.rs"

[[example]]
name = "zero_copy_serde"
path = "examples/zero_copy_serde.rs"

[[example]]
name = "custom_processor_tokens"
path = "examples/custom_processor_tokens.rs"